<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GreetingCardApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cropmessage">Select Area to crop!</string>
    <string name="imagedescription">imageDescription</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="clear">clear</string>
    <string name="save">Save</string>
    <string name="color">Add Color</string>
    <string name="sign">Sign</string>
    <string name="app_id">332949726906745</string>
    <string name="anniversary">Anniversary</string>
    <string name="friendship">Friendship</string>
    <string name="birthday">Birthday</string>
    <string name="share">share</string>
    <string name="photo">Photo</string>
    <string name="text">Text</string>
    <string name="add_filter">Add Filter</string>
    <string name="crop">Crop</string>
    <string name="done">done</string>
    <string name="nodescription">nodescription</string>
    <string name="christmas">Christmas</string>

</resources>
