<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/backimage"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/photoview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"
        android:contentDescription="@string/nodescription" />

    <LinearLayout
        android:id="@+id/editoptionslayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:visibility="gone"
        android:gravity="center_horizontal">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/effects"
                android:text="@string/add_filter"
                android:textColor="@android:color/white" 
                android:layout_marginRight="15dp"
                />

            <Button
                android:id="@+id/crop_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/crop"
                android:text="@string/crop"
                android:layout_marginLeft="15dp"
                android:textColor="@android:color/white" />
        </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/filterscrollview"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone" >
    </HorizontalScrollView>

</RelativeLayout>